--- a/nginx/nginx.conf.template
+++ b/nginx/nginx.conf.template
@@ -6,6 +6,17 @@ server {
 
     listen 80;
 
+    location /admin {
+        proxy_pass http://nightlife;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Host $host;
+        proxy_redirect off;
+        proxy_buffering off;
+        allow $admin_ip;
+        deny all;
+    }
+
     location / {
         proxy_pass http://nightlife;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
