--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -1,8 +1,29 @@
 asgiref==3.5.2
-Django==4.0.5
+certifi==2022.5.18.1
+cffi==1.15.0
+charset-normalizer==2.0.12
+coreapi==2.3.3
+coreschema==0.0.4
+cryptography==37.0.2
+Deprecated==1.2.13
+Django==3.2.13
+django-oauth-toolkit==2.0.0
 djangorestframework==3.13.1
 gunicorn==20.1.0
+idna==3.3
+itypes==1.2.0
+Jinja2==3.1.2
+jwcrypto==1.3.1
+MarkupSafe==2.1.1
+oauthlib==3.2.0
+openapi-codec==1.3.2
 psycopg2-binary==2.9.3
+pycparser==2.21
 pytz==2022.1
+requests==2.27.1
+simplejson==3.17.6
 sqlparse==0.4.2
+uritemplate==4.1.1
+urllib3==1.26.9
 whitenoise==6.2.0
+wrapt==1.14.1
