--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     container_name: m_nginx
     depends_on:
       - web
+    environment:
+      - admin_ip=${admin_ip}
     ports:
       - "80:80"
     networks:
