update env and readme

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ db_host="172.19.0.2"
 dj_user="some_username"
 dj_pass="some_pass"
 dj_email="test@test.com"
-
+admin_ip="127.0.0.1; allow 172.19.0.1"
